[gd_scene load_steps=8 format=3 uid="uid://f64q4l2y3ga1"]

[ext_resource type="Script" path="res://Map/Buildings/Capture Point/capture_point.gd" id="1_uo77p"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gwbut"]
radius = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_m1as4"]

[sub_resource type="CylinderMesh" id="CylinderMesh_q54w0"]
material = SubResource("StandardMaterial3D_m1as4")
top_radius = 0.05
bottom_radius = 0.05

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ppcno"]
radius = 0.05

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2wqa2"]

[sub_resource type="PrismMesh" id="PrismMesh_c4h2q"]
material = SubResource("StandardMaterial3D_2wqa2")
size = Vector3(0.5, 1, 0.1)

[node name="Capture Point" type="Area3D"]
script = ExtResource("1_uo77p")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_gwbut")

[node name="RigidBody3D" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CylinderMesh_q54w0")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_ppcno")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="RigidBody3D"]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0, 1.69291, 0.534253)
mesh = SubResource("PrismMesh_c4h2q")
skeleton = NodePath("../MeshInstance3D")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
